<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TVB投票系統</string>
    <string name="voting_system">智能投票系統</string>
    <string name="thanks">謝謝您的參與</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>

    <string name="scoring_error">輸入有誤,是否放棄提交？</string>
    <string name="submit_error">提交失敗</string>
    <string name="submit_sucss">提交成功</string>
    <string name="psw_error">密碼有誤</string>
    <string name="voting_null">沒有投票信息！</string>
    <string name="seatnum_null">沒有設置座位號</string>
    <string name="setting_psw">請輸入工程密碼</string>
    <string name="seat_num">請設置座位號</string>
    <string name="seatnum_error">座位號有誤</string>
    <string name="ipaddress_error">IP地址有誤</string>
    <string name="not_finish">投票未完成，無法提交！</string>
    <string name="score_40_100">40&#8211;100分</string>
    <string name="set_seat">設置座位號：</string>
    <string name="set_ip">設置IP：</string>
    <string name="set_port">設置端口：</string>
    <string name="check_udpate">檢測升級</string>
    <string name="set_confirm">設置完成</string>
    <string name="submit_confirm">你確定要提交嗎？</string>
    <string name="submit">提交</string>
    <string name="choose_note">選擇您的喜好！</string>
    <string name="voting_limit">超過投票人數上限！</string>
    <string name="network_ng">網絡不通</string>
    <string name="connect_server">正在連接服務器</string>

    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_write_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
</resources>