<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15px"
    android:paddingRight="15px"
    android:background="@drawable/white_shap_bg" >

    <TextView
        android:id="@+id/dialog_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="28sp"
        android:text="@string/setting_psw"

        />
    <EditText
        android:id="@+id/psw"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_margin="8dp"
        android:password="true"
        android:maxLines="1"
        android:focusable="true"
        android:layout_below="@+id/dialog_tx"
        style="@style/TW_TT_EditText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dialog_tx"
        android:layout_marginTop="100dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/cancel"
            android:layout_height="50dp"
            android:layout_width="120dp"
            android:text="@string/cancel"
            android:textSize="24sp"
            android:background="@drawable/gray_shap_bg"
            />
        <Button
            android:id="@+id/confirm"
            android:layout_height="50dp"
            android:layout_width="120dp"
            android:layout_marginLeft="20dp"
            android:text="@string/confirm"
            android:textSize="24sp"
            android:background="@drawable/gray_shap_bg"
            />
    </LinearLayout>
</RelativeLayout>